
2008-08-08  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el: Fixing `q' in Xref buffers.

	(slime-popup-buffer-snapshot-unchanged-p): New.
	(slime-popup-buffer-restore-snapshot): New.
	(slime-xref-quit): Can't use slime-popup-buffer directly. Instead
	implement its own quit behaviour using the above functions.

2008-08-09  Helmut Eller  <heller@common-lisp.net>

	* swank-lispworks.lisp (defimplementation): Record location.

2008-08-09  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (*maximum-pipelined-output-chunks*): New variable

2008-08-09  Helmut Eller  <heller@common-lisp.net>

	Display the "Use default debugger" restart more prominently.

	* swank.lisp (swank-debugger-hook): Bind a user visible restart
	to invoke the native debugger.
	(*global-debugger*): Make this nil by default.
	(sldb-loop): Minor cleanups.
	(sldb-break-with-default-debugger): Invoke the native debugger
	on top of the slime debugger.

	* slime.el (slime-simple-completions): Bind slime-current-thread
	to t so that completion is peformed in a fresh thread.
	(sldb-setup): Always pop to the debugger buffer.
	(sldb-activate): Optionally select the window.

	* swank-sbcl.lisp (sb-thread::get-foreground): Override this
	as the default implementation is unusable for Slime.

	* swank-lispworks.lisp (environment-display-notifier): Just
	return t.

2008-08-09  Helmut Eller  <heller@common-lisp.net>

	* swank-lispworks.lisp (disassemble-frame): Implemented.

2008-08-08  Helmut Eller  <heller@common-lisp.net>

	Use wait-for-event instead of catch/throw where needed.

	* swank.lisp (read-user-input-from-emacs, y-or-n-p-in-emacs)
	(eval-in-emacs): Use wait-for-event.
	(make-tag): Replaces intern-catch-tag.
	(take-input): Deleted.
	(dispatch-event): Remove some redundancy.

2008-08-08  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el: Make xref buffers use `slime-with-popup-buffer',
	nee `slime-with-temp-buffer'.

	(slime-with-xref-buffer): Rewritten using a popup buffer.